[project]
name = "harrington-common"
version = "0.1.0"
description = "Shared theme, admin framework, and components for Harrington apps"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Joey Harrington" },
]
dependencies = [
    "streamlit>=1.30.0",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest", "ruff"]
