[project]
name = "harrington-common"
version = "0.3.1"
description = "Shared theme, compute layer, reporting (LaTeX/gnuplot/PDF), and admin for Harrington apps"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Joey Harrington" },
]
dependencies = [
    "streamlit>=1.30.0",
    "numpy>=1.24.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
numba = ["numba>=0.59.0"]
cuda = ["cupy-cuda12x>=13.0.0"]
hpc = ["numba>=0.59.0", "joblib>=1.3.0"]
full = ["numba>=0.59.0", "cupy-cuda12x>=13.0.0", "joblib>=1.3.0"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest", "ruff"]
